# HumanBench

./: .env.example  .gitignore  PLAN.md  README.md  SCORING_FRAMEWORK.md  SECURITY.md  prompts.json  pyproject.toml  results.json  run_benchmark.py  wrangler.jsonc
adapters/: __init__.py  anthropic.py  base.py  deepseek.py  google.py  mistral.py  openai.py  openrouter.py
humanbench/: __init__.py  cli.py
humanbench.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
judge/: prompt.txt
site/: index.html  results.json
