[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "humanbench"
version = "0.1.0"
description = "Terminal-first humanness benchmark for LLMs"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
humanbench = "humanbench.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["humanbench*", "adapters*", "judge*"]
